# tamiya-systems

./: .gitignore  README.md  packages.repos
python_ws/: requirements.txt
python_ws/lidar_e2e/: 1_create_dataset.sh  1_extract_topics.py  2_train.py  3_deploy_model.sh  3_export_onnx.py  4_deploy_model.sh  export_onnx.py  extract_topics.py
python_ws/lidar_e2e/config/: tinylidarnet_config.pbtxt  train.yaml
python_ws/lidar_e2e/src/: dataset.py  loss.py  model.py  transform.py
ros2_ws/src/control/control_filter/: CMakeLists.txt
ros2_ws/src/control/control_filter/config/: control_filter.param.yaml
ros2_ws/src/control/control_filter/include/control_filter/: control_filter_node.hpp
ros2_ws/src/control/control_filter/launch/: control_filter.launch.xml
ros2_ws/src/control/control_filter/src/: control_filter_core.cpp  control_filter_node.cpp
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/: CMakeLists.txt  package.xml
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/config/: lidar_encoder_node.param.yaml  lidarnet_decoder_node.param.yaml  tinylidarnet_config.pbtxt
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/include/: lidarnet_decoder_node.hpp
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/include/isaac_ros_lidar_e2e_control/: scan_encoder_node.hpp
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/launch/: isaac_ros_lidar_e2e.launch.xml
ros2_ws/src/isaac_ros/isaac_ros_lidar_e2e_control/src/: lidarnet_decoder_node.cpp  scan_encoder_node.cpp
ros2_ws/src/launch/sensor_kit_launch/: CMakeLists.txt  package.xml
ros2_ws/src/launch/sensor_kit_launch/config/: elp_camera_node.param.yaml  hokuyo.param.yaml
ros2_ws/src/launch/sensor_kit_launch/launch/: camera.launch.xml  camera_elp.launch.xml  hokuyo.launch.xml  lidar.launch.xml  lidar_hokuyo.launch.xml  sensor_kit.launch.xml
ros2_ws/src/launch/system_launch/config/control/: control_filter.param.yaml
ros2_ws/src/launch/system_launch/launch/: system.launch.xml  vslam.launch.xml
ros2_ws/src/tools/bag_manager_py/: package.xml
ros2_ws/src/tools/bag_manager_py/bag_manager_py/: bag_manager_core.py  bag_manager_node.py
ros2_ws/src/tools/bag_manager_py/config/: bag_manager.param.yaml
ros2_ws/src/tools/bag_manager_py/launch/: bag_manager.launch.xml
ros2_ws/src/tools/teleop_manager/: CMakeLists.txt  package.xml
ros2_ws/src/tools/teleop_manager/launch/: teleop_manager.launch.xml
ros2_ws/src/tools/teleop_manager/src/: teleop_manager_core.cpp  teleop_manager_node.cpp
ros2_ws/src/vehicle/jetracer_node/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/vehicle/jetracer_node/config/: jetracer_node.param.yaml
ros2_ws/src/vehicle/jetracer_node/jetracer_node/: jetracer_core.py  jetracer_node.py
ros2_ws/src/vehicle/jetracer_node/launch/: jetracer.launch.xml
scripts/: bluetooth.sh  clear_cache.sh  screen.sh  toggle_network.sh
(+6 files in other folders)
