<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2022 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_lidar_e2e_control</name>
  <version>0.0.1</version>
  <description>NITROS Encoder for sensor_msgs::msg::LaserScan history and decoding</description>

  <maintainer email="user@example.com">ROS User</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>ROS User</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>isaac_ros_nitros_tensor_list_type</depend>
  <depend>ackermann_msgs</depend>

  <build_depend>isaac_ros_common</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>