<?xml version="1.0"?>
<package format="3">
  <name>jetracer_node</name>
  <version>0.1.0</version>
  <description>JetRacer Node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
